# Vault-Explorer

./: .gitignore  Cargo.toml
resources/: package.json  webpack.config.js
resources/js/: index.js
resources/sass/: index.scss
src/: appstate.rs  basetemplate.rs  main.rs  search_indexer.rs
src/helpers/: ajax_responses.rs  filters.rs  markdown.rs  mod.rs  shared_templates.rs  tags.rs  template_structs.rs  traits.rs
src/route_handlers/: api_search.rs  mod.rs  note.rs  root.rs  search.rs  vault.rs
templates/components/: footer.html  head_and_nav.html  side_nav.html  tree_entry.html  vault_tree.html
templates/pages/: base.html  note.html  root.html  search.html
vaults/Vault Explorer Test Vault/: Index.md  Welcome.md
vaults/Vault Explorer Test Vault 2/: Goose.md
vaults/Vault Explorer Test Vault 2/.obsidian/: workspace.json
vaults/Vault Explorer Test Vault/.obsidian/: workspace.json
vaults/Vault Explorer Test Vault/Folder 1/: Test 1.md  Untitled.md
vaults/Vault Explorer Test Vault/Folder 2/: Test 2.md
