[package]
name = "vault-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
askama = "0.12.1"
axum = "0.7.9"
comrak = "0.29.0"
html-escape = "0.2.13"
indexmap = "2.6.0"
regex = "1.11.1"
serde = "1.0.215"
serde_json = "1.0.133"
tantivy = "0.22.0"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
vault_dweller = {path = "vault-dweller"}
